# Fishook-api

./: Cargo.toml
src/: errors.rs  handlers.rs  main.rs  models.rs  state.rs
src/handlers/: buckets.rs  hook.rs  requests.rs  stream.rs
